# adding_text_to_video_django

./: README.md  pyproject.toml  requirements.txt
text_to_video/: manage.py
text_to_video/media/videos/: running_text1688202895.avi  running_text1688214522.avi  running_text1688214774.avi  running_text1688445021.avi
text_to_video/text_to_video/: asgi.py  settings.py  urls.py  wsgi.py
text_to_video/video_generator/: models.py  urls.py  views.py
text_to_video/video_generator/migrations/: 0001_initial.py
text_to_video/video_generator/utils/: video_generator.py
