[tool.poetry]
name = "adding-text-to-video-django"
version = "0.1.0"
description = ""
authors = ["qqKazakov <leap74rus@gmail.com>"]
readme = "README.md"
packages = [{include = "adding_text_to_video_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
flake8 = "^6.0.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
